@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.958 2022/01/25 01:34:30 wiz Exp $
+# $NetBSD: Makefile,v 1.959 2022/01/25 01:39:59 wiz Exp $
 #
 
 COMMENT=	Graphics tools and libraries
@@ -494,7 +494,6 @@ SUBDIR+=	py-chart
 SUBDIR+=	py-cycler
 SUBDIR+=	py-dot
 SUBDIR+=	py-exifread
-SUBDIR+=	py-fits
 SUBDIR+=	py-gdchart
 SUBDIR+=	py-gdmodule
 SUBDIR+=	py-ggplot
